fix bugs: align modal close & remove logo text, navbar spacing

--- a/app/assets/stylesheets/components/logo.scss
+++ b/app/assets/stylesheets/components/logo.scss
@@ -18,7 +18,7 @@
       display: none;
     }
 
-    @media screen and (max-width: 480px) {
+    @media screen and (max-width: 1036px) {
       font-size: 1.2em;
     }
   }
