--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -136,6 +136,7 @@
 @media (max-width: 991px) {
   .navbar {
     position: fixed;
+    padding: 0 20px;
     width: 100%;
     z-index: 1;
     .navbar-brand {
